<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OtpVerification">



        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cybershield"
            />

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/info"
                android:textAlignment="center"

                android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="100dp"
                android:layout_marginBottom="0dp"

                android:text="+92 3022663141"
                android:textAlignment="center"

                android:textSize="24sp" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <TextView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"

                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="#BCDCEC"

                android:textSize="15sp" />
        </RelativeLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchCountriesInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType=
                    "phone"
                android:hint="OTP" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>
        <TextView
            android:id="@+id/tv_loo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/didnot"
            android:textAlignment="center"

            android:textSize="15sp" />
        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/resend"
            android:textColor="#BCDCEC"
            android:textAlignment="center"

            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="#1E1E1E"
            android:text="@string/verift"/>


    </LinearLayout>
</ScrollView>
